--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "xylo-md",
+  "name": "ALONG",
   "description": "Advanced WhatsApp Bot with 1000+ commands, AI, games, downloader, moderation and dev tools.",
   "repository": "https://github.com/Mek-d1/XYLO-MD",
   "stack": "heroku-24",
